Fix footer consistency across all pages and update chatbot styling
- Update footer partial to match homepage structure exactly
- Standardize all inline footers across 15 pages with consistent structure
- Add responsive ordering classes (order-md-2, order-md-3) to footer columns
- Update copyright to use dynamic current-year span
- Add lazy loading attributes to footer logos
- Ensure social links have target='_blank' for consistency
- Change chatbot toggle from square to round (border-radius: 50%)
- Update chatbot background to coreChampers with gold border
- Ensure gold butterfly icon displays correctly
- Fix notification badge positioning to appear on top with higher z-index
- Update service worker cache version to v6 for cache refresh
- Add documentation files: ANALYTICS.md, PERFORMANCE.md, SEO_TECH.md

--- a/displays.html
+++ b/displays.html
@@ -116,6 +116,54 @@
         "description": "Custom displays and installations for events and businesses. Professional event decorations, artistic arrangements, and creative displays that transform spaces."
     }
     </script>
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+            {
+                "@type": "Question",
+                "name": "Can displays be hired or do we need to purchase them?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "We offer both hire and purchase options. For seasonal displays that you'll use annually, hiring is often more cost-effective. For permanent installations or custom displays, purchase may be the better option. We'll discuss the best approach for your needs during consultation."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "How far in advance should we book?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "For custom displays, we recommend booking 6-8 weeks in advance to allow time for design, sourcing, and fabrication. For seasonal displays using existing designs, 3-4 weeks is usually sufficient. However, we can accommodate shorter timelines depending on complexity and availability."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "Do you handle installation and removal?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Yes, we provide full installation and removal services. Our team handles all setup, ensures proper integration with your venue, and manages complete pack-down after your event. For hire displays, we also handle storage and maintenance."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "Can displays be customised to our brand?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Absolutely. Every display is customised to match your brand, theme, or event. We work closely with you to ensure colours, styling, and messaging align perfectly with your brand identity and objectives."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "What areas do you serve?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "We serve businesses throughout Perth and Western Australia. Based in Brookton, WA, we regularly work with clients across the Perth metropolitan area and can travel to regional locations as needed."
+                }
+            }
+        ]
+    }
+    </script>
 </head>
 
 <body class="displays">
@@ -484,25 +532,25 @@
                         </div>
                 
                 <!-- Logo in Center -->
-                <div class="col-3 text-center footer-column">
-                    <img src="images/logo-blk.png" alt="Bloom'n Events Co Logo" class="img-fluid footer-logo" loading="lazy" decoding="async">
+                <div class="col-3 text-center footer-column order-md-2">
+                    <img src="images/logo-blk.png" alt="Bloom'n Events Co Logo" class="img-fluid footer-logo mb-3" loading="lazy" decoding="async">
+                    <p class="text-gold fw-light small mb-0">
+                        Copyright &copy; <span id="current-year"></span> Bloom'n Events Co Pty Ltd. All rights reserved.
+                    </p>
                 </div>
                 
                 <!-- Call to Action and Social Media on Right -->
-                <div class="col-3 footer-column text-center">
-                    <h5>Ready to Create Something Amazing?</h5>
-                    <p class="text-light small">Let's discuss how we can make your next event unforgettable</p>
+                <div class="col-3 footer-column text-center order-md-3">
+                    <h5 class="mt-3">Ready to Create Something Amazing?</h5>
+                    <p class="text-light small mb-2">Let's discuss how we can make your next event unforgettable</p>
                     <a href="contact.html" class="btn btn-gold">Get in Touch</a>
                     <div class="d-flex flex-row justify-content-center gap-3 social-links social-spacing">
-                                            <a href="https://www.facebook.com/bloomneventsco/" aria-label="Facebook" rel="noopener noreferrer"><i class="bi bi-facebook"></i></a>
-                    <a href="https://www.instagram.com/bloomneventsco/" aria-label="Instagram" rel="noopener noreferrer"><i class="bi bi-instagram"></i></a>
-                    <a href="https://www.linkedin.com/in/tamara-de-lange-nee-lilly-3421825b/" aria-label="LinkedIn" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
-                    <a href="https://pin.it/1K3o7UFvI" aria-label="Pinterest" rel="noopener noreferrer"><i class="bi bi-pinterest"></i></a>
-                    <a href="https://www.tiktok.com/@bloomneventsco" aria-label="TikTok" rel="noopener noreferrer"><i class="bi bi-tiktok"></i></a>
-            </div>
-                    <p class="text-gold fw-light small mb-0">
-                        Copyright &copy; 2024 Bloom'n Events Co Pty Ltd. All rights reserved.
-            </p>
+                        <a href="https://www.facebook.com/bloomneventsco/" aria-label="Facebook" target="_blank" rel="noopener noreferrer"><i class="bi bi-facebook"></i></a>
+                        <a href="https://www.instagram.com/bloomneventsco/" aria-label="Instagram" target="_blank" rel="noopener noreferrer"><i class="bi bi-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/tamara-de-lange-nee-lilly-3421825b/" aria-label="LinkedIn" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
+                        <a href="https://pin.it/1K3o7UFvI" aria-label="Pinterest" target="_blank" rel="noopener noreferrer"><i class="bi bi-pinterest"></i></a>
+                        <a href="https://www.tiktok.com/@bloomneventsco" aria-label="TikTok" target="_blank" rel="noopener noreferrer"><i class="bi bi-tiktok"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
