--- a/events.html
+++ b/events.html
@@ -145,6 +145,54 @@
         }
     }
     </script>
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+            {
+                "@type": "Question",
+                "name": "What types of corporate events do you plan?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "We plan a wide range of corporate events including networking events, conferences, workshops, product launches, brand activations, team building events, and custom corporate experiences. Each event is tailored to your specific objectives and audience."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "How far in advance should we book?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "We recommend booking at least 4-6 weeks in advance for standard events, and 8-12 weeks for larger conferences or complex activations. However, we can accommodate shorter timelines depending on availability. Contact us to discuss your timeline."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "Do you handle all aspects of the event?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Yes, we provide full-service event management. This includes design, styling, technical setup (lighting, sound, power), coordination, on-site management, and pack-down. We can also coordinate with caterers, speakers, and other vendors as needed."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "What areas do you serve?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "We serve businesses throughout Perth and Western Australia. Based in Brookton, WA, we regularly work with clients across the Perth metropolitan area and can travel to regional locations as needed."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "Can you work with our existing venue?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Absolutely. We can work with your chosen venue or help you find the perfect location. We'll assess the space, handle all technical requirements, and transform it to match your event vision."
+                }
+            }
+        ]
+    }
+    </script>
 </head>
 
 <body class="events">
@@ -537,25 +585,25 @@
                         </div>
                 
                 <!-- Logo in Center -->
-                <div class="col-3 text-center footer-column">
-                    <img src="images/logo-blk.png" alt="Bloom'n Events Co Logo" class="img-fluid footer-logo" loading="lazy" decoding="async">
+                <div class="col-3 text-center footer-column order-md-2">
+                    <img src="images/logo-blk.png" alt="Bloom'n Events Co Logo" class="img-fluid footer-logo mb-3" loading="lazy" decoding="async">
+                    <p class="text-gold fw-light small mb-0">
+                        Copyright &copy; <span id="current-year"></span> Bloom'n Events Co Pty Ltd. All rights reserved.
+                    </p>
                 </div>
                 
                 <!-- Call to Action and Social Media on Right -->
-                <div class="col-3 footer-column text-center">
-                    <h5>Ready to Create Something Amazing?</h5>
-                    <p class="text-light small">Let's discuss how we can make your next event unforgettable</p>
+                <div class="col-3 footer-column text-center order-md-3">
+                    <h5 class="mt-3">Ready to Create Something Amazing?</h5>
+                    <p class="text-light small mb-2">Let's discuss how we can make your next event unforgettable</p>
                     <a href="contact.html" class="btn btn-gold">Get in Touch</a>
                     <div class="d-flex flex-row justify-content-center gap-3 social-links social-spacing">
-                                            <a href="https://www.facebook.com/bloomneventsco/" aria-label="Facebook" rel="noopener noreferrer"><i class="bi bi-facebook"></i></a>
-                    <a href="https://www.instagram.com/bloomneventsco/" aria-label="Instagram" rel="noopener noreferrer"><i class="bi bi-instagram"></i></a>
-                    <a href="https://www.linkedin.com/in/tamara-de-lange-nee-lilly-3421825b/" aria-label="LinkedIn" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
-                    <a href="https://pin.it/1K3o7UFvI" aria-label="Pinterest" rel="noopener noreferrer"><i class="bi bi-pinterest"></i></a>
-                    <a href="https://www.tiktok.com/@bloomneventsco" aria-label="TikTok" rel="noopener noreferrer"><i class="bi bi-tiktok"></i></a>
-            </div>
-                    <p class="text-gold fw-light small mb-0">
-                        Copyright &copy; 2024 Bloom'n Events Co Pty Ltd. All rights reserved.
-            </p>
+                        <a href="https://www.facebook.com/bloomneventsco/" aria-label="Facebook" target="_blank" rel="noopener noreferrer"><i class="bi bi-facebook"></i></a>
+                        <a href="https://www.instagram.com/bloomneventsco/" aria-label="Instagram" target="_blank" rel="noopener noreferrer"><i class="bi bi-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/tamara-de-lange-nee-lilly-3421825b/" aria-label="LinkedIn" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
+                        <a href="https://pin.it/1K3o7UFvI" aria-label="Pinterest" target="_blank" rel="noopener noreferrer"><i class="bi bi-pinterest"></i></a>
+                        <a href="https://www.tiktok.com/@bloomneventsco" aria-label="TikTok" target="_blank" rel="noopener noreferrer"><i class="bi bi-tiktok"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
