--- a/workshops.html
+++ b/workshops.html
@@ -137,6 +137,54 @@
         }
       }
     </script>
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+            {
+                "@type": "Question",
+                "name": "What age groups do you cater for?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "We offer workshops for all ages. Our kids workshops are suitable for children aged 5-15, while our adult workshops are designed for adults and seniors. We can also create custom workshops for specific age groups or mixed-age events."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "How many participants can you accommodate?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "We can accommodate various group sizes depending on the activity and venue. For single workshops, we typically handle 10-30 participants per session. For larger programmes, we can run multiple sessions or scale up with additional facilitators. Contact us to discuss your specific needs."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "Do you provide all materials?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Yes, we provide all materials, tools, and supplies needed for each workshop. This includes craft supplies, tools, and any special items required. Participants just need to show up ready to create!"
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "Can workshops be customised to our theme?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Absolutely. We specialise in customising workshops to match your event theme, season, or brand. Whether it's a Hawaiian theme, sustainability focus, or seasonal celebration, we can adapt activities to align with your vision."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "How far in advance should we book?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "We recommend booking at least 3-4 weeks in advance, especially for school holiday programmes or multi-location events. However, we can accommodate shorter timelines depending on availability. Contact us to discuss your dates."
+                }
+            }
+        ]
+    }
+    </script>
 
 </head>
 
@@ -519,25 +567,25 @@
                 </div>
                 
                 <!-- Logo in Center -->
-                <div class="col-3 text-center footer-column">
-                    <img src="images/logo-blk.png" alt="Bloom'n Events Co Logo" class="img-fluid footer-logo" loading="lazy" decoding="async">
+                <div class="col-3 text-center footer-column order-md-2">
+                    <img src="images/logo-blk.png" alt="Bloom'n Events Co Logo" class="img-fluid footer-logo mb-3" loading="lazy" decoding="async">
+                    <p class="text-gold fw-light small mb-0">
+                        Copyright &copy; <span id="current-year"></span> Bloom'n Events Co Pty Ltd. All rights reserved.
+                    </p>
                 </div>
                 
                 <!-- Call to Action and Social Media on Right -->
-                <div class="col-3 footer-column text-center">
-                    <h5>Ready to Create Something Amazing?</h5>
-                    <p class="text-light small">Let's discuss how we can make your next event unforgettable</p>
+                <div class="col-3 footer-column text-center order-md-3">
+                    <h5 class="mt-3">Ready to Create Something Amazing?</h5>
+                    <p class="text-light small mb-2">Let's discuss how we can make your next event unforgettable</p>
                     <a href="contact.html" class="btn btn-gold">Get in Touch</a>
                     <div class="d-flex flex-row justify-content-center gap-3 social-links social-spacing">
-                                            <a href="https://www.facebook.com/bloomneventsco/" aria-label="Facebook" rel="noopener noreferrer"><i class="bi bi-facebook"></i></a>
-                    <a href="https://www.instagram.com/bloomneventsco/" aria-label="Instagram" rel="noopener noreferrer"><i class="bi bi-instagram"></i></a>
-                    <a href="https://www.linkedin.com/in/tamara-de-lange-nee-lilly-3421825b/" aria-label="LinkedIn" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
-                    <a href="https://pin.it/1K3o7UFvI" aria-label="Pinterest" rel="noopener noreferrer"><i class="bi bi-pinterest"></i></a>
-                    <a href="https://www.tiktok.com/@bloomneventsco" aria-label="TikTok" rel="noopener noreferrer"><i class="bi bi-tiktok"></i></a>
+                        <a href="https://www.facebook.com/bloomneventsco/" aria-label="Facebook" target="_blank" rel="noopener noreferrer"><i class="bi bi-facebook"></i></a>
+                        <a href="https://www.instagram.com/bloomneventsco/" aria-label="Instagram" target="_blank" rel="noopener noreferrer"><i class="bi bi-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/tamara-de-lange-nee-lilly-3421825b/" aria-label="LinkedIn" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
+                        <a href="https://pin.it/1K3o7UFvI" aria-label="Pinterest" target="_blank" rel="noopener noreferrer"><i class="bi bi-pinterest"></i></a>
+                        <a href="https://www.tiktok.com/@bloomneventsco" aria-label="TikTok" target="_blank" rel="noopener noreferrer"><i class="bi bi-tiktok"></i></a>
                     </div>
-                    <p class="text-gold fw-light small mb-0">
-                        Copyright &copy; 2024 Bloom'n Events Co Pty Ltd. All rights reserved.
-                    </p>
                 </div>
             </div>
         </div>
