--- a/team.html
+++ b/team.html
@@ -340,7 +340,12 @@
         </div>
     </footer>
 
+    <!-- GSAP Animation Library (deferred for performance) -->
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js" defer></script>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" defer></script>
     <script src="scripts.js" type="module" defer></script>
+    <script src="scripts/animations.js" type="module" defer></script>
 </body>
 </html>
