Add 50th Birthday case study and integrate across all relevant pages
- Created new case-study-centuria-50th-birthday.html with full content structure
- Added hero carousel and visual evidence carousel with all 38 images
- Integrated 50th Birthday case study into homepage Success Stories section
- Added to Events page Related Case Studies (expanded to 3-column layout)
- Added to Connect 140 case study Related Case Studies section
- Updated 50th Birthday case study Related Case Studies to show 3 case studies
- Added case study cards to Displays page (replaced text-only section)
- Fixed workshops page case study title (5 Centres in 5 Days)
- Updated sitemap.xml to include new case study page
- Added CSS styling for new carousel IDs
- All case study cards use consistent styling with coreChampers background

--- a/displays.html
+++ b/displays.html
@@ -483,8 +483,35 @@
             <div class="container">
                 <h2 id="caseStudiesHeading" class="text-gold heading-blush-bg content-heading-large text-center mb-5">Related Case Studies</h2>
                 <div class="row g-4">
-                    <div class="col-md-12">
-                        <p class="text-center text-charcoal mb-4">Our displays are featured in various events and case studies. View our <a href="gallery.html" class="text-gold">gallery</a> to see examples of our work, or explore our <a href="events.html" class="text-gold">corporate events</a> and <a href="workshops.html" class="text-gold">workshops</a> to see how displays enhance our event experiences.</p>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="card h-100 shadow" style="background-color: var(--coreChampers);">
+                            <img src="images/Centuria 50th Birthday/140 SGT Foyer.jpg" class="card-img-top" alt="140 St Georges Terrace 50th Birthday Celebration" loading="lazy" decoding="async" width="1600" height="900" style="height: 250px; object-fit: cover;">
+                            <div class="card-body text-center">
+                                <h3 class="text-gold mb-3">Landmark Anniversary Event</h3>
+                                <p class="text-charcoal">Bespoke 50th Birthday Celebration for 140 St Georges Terrace featuring elevated styling, refined ambience, and thoughtful branding moments that transformed shared spaces into an elegant celebration environment.</p>
+                                <a href="case-study-centuria-50th-birthday.html" class="btn btn-gold btn-sm">Read Case Study</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="card h-100 shadow" style="background-color: var(--coreChampers);">
+                            <img src="images/Centuria Connect140/Connect140 (1).jpg" class="card-img-top" alt="Connect 140 B2B Networking Event" loading="lazy" decoding="async" width="1600" height="900" style="height: 250px; object-fit: cover;">
+                            <div class="card-body text-center">
+                                <h3 class="text-gold mb-3">Corporate Networking Event</h3>
+                                <p class="text-charcoal">Connect 140 event featuring black, white, and gold palette, refined networking arena styling, and branded displays that transformed the foyer into a sophisticated business ecosystem.</p>
+                                <a href="case-study-centuria-connect140.html" class="btn btn-gold btn-sm">Read Case Study</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="card h-100 shadow" style="background-color: var(--coreChampers);">
+                            <img src="images/Home/Food Festival Celebrates Tenant Opening & Drives Engagement CASE STUDY IMAGE.jpg" class="card-img-top" alt="A World of Flavours Community Event" loading="lazy" decoding="async" width="1600" height="900" style="height: 250px; object-fit: cover;" sizes="(max-width: 576px) 100vw, (max-width: 992px) 50vw, 33vw" srcset="images/Home/Food Festival Celebrates Tenant Opening & Drives Engagement CASE STUDY IMAGE-480w.jpg 480w, images/Home/Food Festival Celebrates Tenant Opening & Drives Engagement CASE STUDY IMAGE-768w.jpg 768w, images/Home/Food Festival Celebrates Tenant Opening & Drives Engagement CASE STUDY IMAGE-1200w.jpg 1200w, images/Home/Food Festival Celebrates Tenant Opening & Drives Engagement CASE STUDY IMAGE.jpg 1600w">
+                            <div class="card-body text-center">
+                                <h3 class="text-gold mb-3">Community Event & Retail Activation</h3>
+                                <p class="text-charcoal">A World of Flavours event featuring Italian-inspired styling, umbrellas, bunting, dining tables, and vibrant cultural displays that transformed The Junction into an international alfresco village.</p>
+                                <a href="case-study-hawaiian-forrestfield.html" class="btn btn-gold btn-sm">Read Case Study</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
