--- a/workshops.html
+++ b/workshops.html
@@ -515,8 +515,8 @@
                         <div class="card h-100 shadow">
                             <img src="images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (1).jpeg" class="card-img-top" alt="Hawaiian Neighbourhood Nibbles School Holiday Programme" loading="lazy" decoding="async">
                             <div class="card-body">
-                                <h3 class="text-gold mb-3">School Holiday Programme Drives Traffic Across 7 Centres</h3>
-                                <p class="text-charcoal">How we delivered a food-based July school holiday activity across seven Hawaiian shopping centres, driving traffic uplifts and encouraging dwell among families. The programme successfully engaged Hawaiian's most valuable market segment while maintaining consistent quality across multiple locations.</p>
+                                <h3 class="text-gold mb-3">School Holiday Programme Drives Traffic Across 5 Centres in 5 Days</h3>
+                                <p class="text-charcoal">How we delivered a food-based July school holiday activity across five Hawaiian shopping centres in 5 days, driving traffic uplifts and encouraging dwell among families. The programme successfully engaged Hawaiian's most valuable market segment while maintaining consistent quality across multiple locations.</p>
                                 <a href="case-study-hawaiian-neighbourhood-nibbles.html" class="btn btn-gold btn-sm">Read Case Study</a>
                             </div>
                         </div>
