--- a/events.html
+++ b/events.html
@@ -434,7 +434,7 @@
                         <div class="card h-100 shadow" style="background-color: var(--coreChampers);">
                             <div class="card-body text-center">
                                 <h3 class="text-gold mb-3">Proven Results</h3>
-                                <p class="text-charcoal">We've successfully delivered events for leading Perth businesses including <a href="case-study-centuria-connect140.html" class="text-gold">Centuria Capital</a> and <a href="case-study-hawaiian-forrestfield.html" class="text-gold">Hawaiian Shopping Centres</a>.</p>
+                                <p class="text-charcoal">We've successfully delivered events for leading Perth businesses including <a href="case-study-centuria-connect140.html" class="text-gold">Centuria Capital</a>, <a href="case-study-centuria-50th-birthday.html" class="text-gold">140 St Georges Terrace</a>, and <a href="case-study-hawaiian-forrestfield.html" class="text-gold">Hawaiian Shopping Centres</a>.</p>
                             </div>
                         </div>
                     </div>
@@ -520,9 +520,9 @@
             <div class="container">
                 <h2 id="caseStudiesHeading" class="text-gold heading-blush-bg content-heading-large text-center mb-5">Related Case Studies</h2>
                 <div class="row g-4">
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-lg-4">
                         <div class="card h-100 shadow">
-                            <img src="images/Centuria Connect140/Connect140 (1).jpg" class="card-img-top" alt="Centuria Connect140 Networking Event" loading="lazy" decoding="async">
+                            <img src="images/Centuria Connect140/Connect140 (1).jpg" class="card-img-top" alt="Centuria Connect140 Networking Event" loading="lazy" decoding="async" width="1600" height="900" style="height: 250px; object-fit: cover;">
                             <div class="card-body">
                                 <h3 class="text-gold mb-3">Corporate Networking Event Delivers Meaningful Connections</h3>
                                 <p class="text-charcoal">How we created an engaging atmosphere for Centuria Capital that naturally facilitated meaningful conversations among Perth business professionals.</p>
@@ -530,9 +530,19 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-lg-4">
                         <div class="card h-100 shadow">
-                            <img src="images/Hawaiian World Of Flavours/Hawaian250315-0173.jpg" class="card-img-top" alt="Hawaiian Forrestfield Food Festival" loading="lazy" decoding="async">
+                            <img src="images/Centuria 50th Birthday/140 SGT Foyer.jpg" class="card-img-top" alt="140 St Georges Terrace 50th Birthday Celebration" loading="lazy" decoding="async" width="1600" height="900" style="height: 250px; object-fit: cover;">
+                            <div class="card-body">
+                                <h3 class="text-gold mb-3">Landmark Anniversary Event Honours Legacy</h3>
+                                <p class="text-charcoal">Bespoke 50th Birthday Celebration for 140 St Georges Terrace that honoured the building's legacy while presenting it as contemporary and future-focused.</p>
+                                <a href="case-study-centuria-50th-birthday.html" class="btn btn-gold btn-sm">Read Case Study</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="card h-100 shadow">
+                            <img src="images/Hawaiian World Of Flavours/Hawaian250315-0173.jpg" class="card-img-top" alt="Hawaiian Forrestfield Food Festival" loading="lazy" decoding="async" width="1600" height="900" style="height: 250px; object-fit: cover;">
                             <div class="card-body">
                                 <h3 class="text-gold mb-3">Food Festival Celebrates Tenant Opening & Drives Engagement</h3>
                                 <p class="text-charcoal">One-day event for Hawaiian Shopping Centres that celebrated a key tenant opening while showcasing food diversity and driving community engagement.</p>
